feat: Create feature aiKnowledgeVectorDb (#30)
* create feature module + search

* extend functionality

* fixes

* lint + minor fixes

* change naming + remove appContext from details + adjust dialog

* fix action

---------
