# src/app/ai-knowledge-vector-db/pages/ai-knowledge-vector-db-details/ai-knowledge-vector-db-details.viewmodel.ts
@@ -1,0 +1,5 @@
+import { AIKnowledgeVectorDb } from '../../../shared/generated'
+
+export interface AIKnowledgeVectorDbDetailsViewModel {
+  details: AIKnowledgeVectorDb | undefined
+}
